--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,11 @@
             <artifactId>basicplayer</artifactId>
             <version>3.0.0.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
     </dependencies>
 </project>
